Sidestep deprecated ctor